# melogger

./: README.md  deploy.py  pyproject.toml  setup.py
.deploy/: deploy.py  setup.txt
.github/workflows/: python-package.yml
.run/: Tests.run.xml  deploy_MAJOR.run.xml  deploy_MINOR.run.xml  deploy_PATCH.run.xml
melogger/: __init__.py  builder.py  colors.py  logger.py  utils.py
melogger/format/: __init__.py  _console.py  _file.py
tests/: test_builder.py  test_logger.py  test_logger_console_formatter.py  test_logger_file_formatter.py  test_logger_file_formatter_with_rollover.py  utils.py
tests/format/: test_console.py  test_file.py
